Extend styling to docs

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav>
-  <a disabled>Koppelbot</a>
+  <a class="xyz-logo">Koppelbot</a>
 
   <a href="https://github.com/PlanBCode/koppelbot">Github</a>
   <a>About</a>
