--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Koppelbot</title>
-    <link rel="stylesheet" type="text/css" href="./xyz-style.css"/>
-    <script type="text/javascript" src="./xyz-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/xyz-style.css"/>
+    <script type="text/javascript" src="/xyz-ui.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
@@ -11,8 +11,9 @@
   <a class="xyz-logo">Koppelbot</a>
 
   <a href="https://github.com/PlanBCode/koppelbot">Github</a>
+  <a href="/doc">Download</a>
   <a>About</a>
-  <a href="./doc">Docs</a>
+  <a href="/doc">Docs</a>
 </nav>
 <div id="background"></div>
 <div id="content">
