--- a/custom/tutorial/content/index.html
+++ b/custom/tutorial/content/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
-    <script type="text/javascript" src="./xyz-ui.js"></script>
-    <link rel="stylesheet" type="text/css" href="./xyz-style.css"/>
+    <script type="text/javascript" src="/xyz-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/xyz-style.css"/>
     <title>xyz - tutorial</title>
 </head>
 <body style="padding: 1cm 3cm 3cm 3cm">
+
+
     <h1>xyz - Tutorial</h1>
 
     <h3>List of fruits</h3>
