--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Van wie is de stad</title>
-    <link rel="stylesheet" type="text/css" href="./xyz-style.css"/>
-    <script type="text/javascript" src="./xyz-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/xyz-style.css"/>
+    <script type="text/javascript" src="/xyz-ui.js"></script>
     <style>
     #locatie{
       background-color: white;
