--- a/custom/sample/content/index.html
+++ b/custom/sample/content/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="./xyz-style.css"/>
-    <script type="text/javascript" src="./xyz-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/xyz-style.css"/>
+    <script type="text/javascript" src="/xyz-ui.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
