--- a/custom/wob/content/index.html
+++ b/custom/wob/content/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Koppelbot</title>
-    <link rel="stylesheet" type="text/css" href="./xyz-style.css"/>
-    <script type="text/javascript" src="./xyz-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="/xyz-style.css"/>
+    <script type="text/javascript" src="/xyz-ui.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
