Add optional units to numbers

--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -18,6 +18,9 @@
       left: 30px;
       opacity: 1;
     }
+    table.xyz-list {
+      font-size: 10pt;
+    }
     </style>
 </head>
 <body>
@@ -32,7 +35,7 @@
       </td>
     </tr>
     <tr>
-      <td width="25%" style="background-color:white;">
+      <td style="background-color:white;">
         <xyz uri="/locatie/*/count(EigenaarID)?EigenaarID==$EigenaarIDs" groupby="EigenaarID" display="chart" showLegend="false" flavor="pie"/>
       </td>
     </tr>
