--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -11,7 +11,7 @@
   <a class="xyz-logo">Koppelbot</a>
 
   <a href="https://github.com/PlanBCode/koppelbot">Github</a>
-  <a href="/doc">Download</a>
+  <a href="/doc/download">Download</a>
   <a>About</a>
   <a href="/doc">Docs</a>
 </nav>
