Add example image to landing page

--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -18,7 +18,9 @@
 <div id="background"></div>
 <div id="content">
   <div>
-  <h2>Intro</h2>
+
+  <h1 style="margin:auto; font-size:50px; text-align:center;"><img src="logo.png" width="50px;" style="transform: translateY(-5px);" valign="middle"/> Koppelbot</h1>
+
   <ul>
     <li>Data oriented CMS</li>
     <li>API first design</li>
@@ -35,6 +37,14 @@
   <xyz uri="/fruit/*/count(name),color" color="color" groupby="color" flavor="doughnut" display="chart" />
 
   </div>
+
+
+    <div>
+    <h2>Examples</h2>
+
+    <img width="100%" src="/vanwieisdestad.png"/>
+
+    </div>
 
   <div>
   <h2>Features</h2>
