--- a/custom/main/content/index.html
+++ b/custom/main/content/index.html
@@ -12,7 +12,6 @@
 
   <a href="https://github.com/PlanBCode/koppelbot">Github</a>
   <a href="/doc/download">Download</a>
-  <a>About</a>
   <a href="/doc">Docs</a>
 </nav>
 <div id="background"></div>
@@ -21,39 +20,29 @@
 
   <h1 style="margin:auto; font-size:50px; text-align:center;"><img src="logo.png" width="50px;" style="transform: translateY(-5px);" valign="middle"/> Koppelbot</h1>
 
-  <ul>
+  <ul style="margin-left:130px;margin-right:60px;">
     <li>Data oriented CMS</li>
-    <li>API first design</li>
-    <li>Dashboards</li>
-    <li>Edit, manage and present data.</li>
+    <li>Crowdsource and manage data</li>
+    <li>Create dashboards to explore data</li>
+    <li>Publish results for articles </li>
+    <li>Seamless integration of UI and API</li>
   </ul>
   </div>
 
   <div>
-  <h2>Examples</h2>
-
-  <xyz uri="/fruit/*/name,color,size" color="color" display="list" />
-
+    <p><li style="list-style-image: url('./green-bullet.png');">Create interactive dashboards with simple xml macro's</li></p>
+  <table><tr><td width="60%">
+  <xyz uri="/fruit/*/Name=name,Color=color,Size=size" color="color" display="list" showCreateButton="false"/>
+</td><td>
   <xyz uri="/fruit/*/count(name),color" color="color" groupby="color" flavor="doughnut" display="chart" />
-
+</td></tr></table>
   </div>
-
 
     <div>
-    <h2>Examples</h2>
-
-    <img width="100%" src="/vanwieisdestad.png"/>
-
+      <p><li style="list-style-image: url('./purple-bullet.png');">Explore and manage data</li></p>
+      <img width="100%" src="/vanwieisdestad.png"/>
     </div>
 
-  <div>
-  <h2>Features</h2>
-  <ul>
-    <li>interactive</li>
-  <li>modular</li>
-  <li>front-back end synergy</li>
-  </div>
-</div>
 
 </body>
 </html>
