--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -61,8 +61,8 @@
         </script>
         <xyz id="map" style="height:100%; width:100%" uri="/locatie/*/geojson,EigenaarID?EigenaarID==$EigenaarIDs" showCreateButton="false" color="EigenaarID" location="geojson" markUserLocation="true" select="locatie" display="map"/>
       </td>
-      <td valign="top" width="30%" style="background-color:#EFEFEF;">
-        <xyz uri="/locatie/*/Percelen=count(EigenaarID),Oppervlakte=sum(Oppervlakte)" showSearchBar="true" color="EigenaarID" groupby="Eigenaar=EigenaarID" display="chart"  multiSelect="EigenaarIDs" flavor="table" style="height:60vh; overflow-y:scroll; overflow-x:hidden;"/>
+      <td valign="top" width="30%" style="background-color:#EFEFEF; height:70vh;">
+        <xyz uri="/locatie/*/Percelen=count(EigenaarID),Oppervlakte=sum(Oppervlakte)" showSearchBar="true" color="EigenaarID" groupby="Eigenaar=EigenaarID" display="chart"  multiSelect="EigenaarIDs" flavor="table" style="height:100%; overflow-y:scroll; overflow-x:hidden;"/>
       </td>
     </tr>
     <tr>
