Add tooltips to map controls

--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -42,7 +42,7 @@
   <table width="100%" height="100%">
     <tr>
       <td style="text-align:center; position: relative;" rowspan="3">
-        <div id="zoom-to-amersfoort">Amersfoort</div>
+        <div id="zoom-to-amersfoort" title="Zoom to Amersfoort">Amersfoort</div>
         <script>
           const DIV = document.getElementById('zoom-to-amersfoort');
           const zoomToAmersfoort = DIV.onclick = ()=>{
