--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -38,6 +38,15 @@
       padding-right: 4px;
       cursor: pointer;
     }
+
+    #locatie > table.xyz-item > tr:nth-child(6) > td:nth-child(2) {
+      height: 200px;
+      overflow: auto;
+    }
+    #locatie > table.xyz-item > tr:nth-child(6) > td:nth-child(2) > div {
+      height: 100%;
+      overflow: auto;
+    }
     </style>
 </head>
 <body>
@@ -70,13 +79,13 @@
     </tr>
     <tr>
       <td style="background-color:white;">
-        <xyz uri="/locatie/*/count(EigenaarID)?EigenaarID==$EigenaarIDs" groupby="EigenaarID" hideMessages display="chart" showLegend="false" flavor="pie"/>
+        <xyz uri="/locatie/*/count(EigenaarID)?EigenaarID==$EigenaarIDs" groupby="EigenaarID" hideMessages select="eigenaar" display="chart" showLegend="false" flavor="pie"/>
       </td>
     </tr>
     <tr><td style="text-align:right;font-size: 10pt; vertical-align: bottom; padding-right: 10px;"><i><a href="https://koppelbot.org">Powered by Koppelbot</a></i></td></tr>
   </table>
   <img id="logo" src="./vanwieisdestad/vanwieisamersfoort.png"/>
-  <xyz id="locatie" color="EigenaarID" uri="/locatie/$locatie/Type,Document=DocumentID,Eigenaar=EigenaarID,Oppervlakte" hideMessages select="locatie" display="item"/>
+  <xyz id="locatie" style="max-height:50vh;" color="EigenaarID" uri="/locatie/$locatie/Type,Document=DocumentID,Eigenaar=EigenaarID,Oppervlakte,Eigenschappen" hideMessages select="locatie" display="item"/>
   <xyz id="eigenaar" uri="/eigenaar/$eigenaar/*" color="id"  hideMessages select="locatie" select="eigenaar" display="item"/>
 
 </body>
