--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -57,6 +57,7 @@
       if(x === null) return;
       const TD_main = document.getElementById('main');
       main.style.width = event.clientX +'px';
+      main.style.minWidth = event.clientX +'px';
       x=null;
     }
 
