--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -9,21 +9,23 @@
 <body onload="onLoad()">
   <table width="100%" height="100%">
     <tr>
-      <td id="main" style="width:70%; text-align:center; position: relative;" rowspan="3">
+      <td id="main" style="width:70%; text-align:center; position: relative;" rowspan="2">
         <div id="zoom-to-amersfoort" title="Zoom to Amersfoort">Amersfoort</div>
         <div id="resizer"></div>
         <xyz id="map" style="height:100%; width:100%" uri="/locatie/*/geojson,EigenaarID?EigenaarID==$EigenaarIDs" hideMessages showCreateButton="false" color="EigenaarID" location="geojson" select="locatie" display="map"/>
       </td>
-      <td valign="top"style="background-color:#EFEFEF; height:70vh;">
+      <td valign="top"style="background-color:#EFEFEF; height: calc(100vh - 50px);">
         <xyz uri="/locatie/*/Percelen=count(EigenaarID),Oppervlakte=sum(Oppervlakte)" hideMessages showSearchBar="true" color="EigenaarID" groupby="Eigenaar=EigenaarID" display="chart" multiSelect="EigenaarIDs" select="eigenaar" flavor="table" style="height:100%; overflow-y:scroll; overflow-x:hidden;"/>
       </td>
     </tr>
-    <tr>
+    <!--tr>
       <td style="background-color:white;">
         <xyz uri="/locatie/*/count(EigenaarID)?EigenaarID==$EigenaarIDs" groupby="EigenaarID" hideMessages select="eigenaar" display="chart" showLegend="false" flavor="pie"/>
       </td>
-    </tr>
-    <tr><td style="text-align:right;font-size: 10pt; vertical-align: bottom; padding-right: 10px;"><i><a href="https://koppelbot.org">Powered by Koppelbot</a></i></td></tr>
+    </tr-->
+    <tr><td style="font-size: 10pt; vertical-align: bottom; padding-right: 10px; height:40px;">
+      <xyz display="share" shareButtonText="Delen"/>
+      <i style="float:right;"><a href="https://koppelbot.org">Powered by Koppelbot</a></i></td></tr>
   </table>
   <img id="logo" src="./vanwieisdestad/vanwieisamersfoort.png"/>
   <xyz id="locatie" style="max-height:50vh;" color="EigenaarID" uri="/locatie/$locatie/Type,Eigenaar=EigenaarID,Oppervlakte,Bron=DocumentID.Bron,Datum=DocumentID.Datum,Eigenschappen" hideMessages select="locatie" display="item"/>
