Add tooltips to list and chart sorting

--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -31,6 +31,7 @@
             multiSelect="EigenaarIDs"
             select="eigenaar"
             searchPlaceholder="Zoek op eigenaar"
+            sortByToolTipPrefix="Sorteer op"
             style="height:100%; overflow-y:scroll; overflow-x:hidden;"
           />
       </td>
