Color pick improvements

--- a/custom/vanwieisdestad/content/index.html
+++ b/custom/vanwieisdestad/content/index.html
@@ -23,10 +23,11 @@
       </td>
       <td valign="top"style="background-color:#EFEFEF; height: calc(100vh - 50px);">
         <xyz
-            uri="/eigenaar/*/Eigenaar=name,Percelen=aantal,Oppervlakte=oppervlakte"
+            uri="/eigenaar/*/id,Eigenaar=name,Percelen=aantal,Oppervlakte=oppervlakte"
             hideMessages
             showSearchBar="true"
-            color="name"
+            hide="id"
+            color="id"
             display="list"
             multiSelect="EigenaarIDs"
             select="eigenaar"
