--- a/custom/vanwieisamersfoort/content/a.html
+++ b/custom/vanwieisamersfoort/content/a.html
@@ -2,9 +2,9 @@
 <head>
     <title>Van wie is de stad</title>
     <link rel="stylesheet" type="text/css" href="/xyz-style.css"/>
-    <link rel="stylesheet" type="text/css" href="/vanwieisdestad/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/vanwieisamersfoort/style.css"/>
     <script type="text/javascript" src="/xyz-ui.js"></script>
-    <script type="text/javascript" src="/vanwieisdestad/main.js"></script>
+    <script type="text/javascript" src="/vanwieisamersfoort/main.js"></script>
 </head>
 <body onload="onLoad()">
   <table width="100%" height="100%">
@@ -44,7 +44,7 @@
       />
       <i style="float:right;"><a href="https://koppelbot.org">Powered by Koppelbot</a></i></td></tr>
   </table>
-  <img id="logo" src="./vanwieisdestad/vanwieisamersfoort.png"/>
+  <img id="logo" src="/vanwieisamersfoort/vanwieisamersfoort.png"/>
   <xyz id="locatie" style="max-height:50vh;" color="EigenaarID" uri="/locatie/$locatie/Type,Eigenaar=EigenaarID,Oppervlakte,Bron=DocumentID.Bron,Datum=DocumentID.Datum,Eigenschappen" hideMessages select="locatie" display="item"/>
   <xyz id="eigenaar" uri="/eigenaar/$eigenaar/*" color="id" hideMessages select="locatie" select="eigenaar" display="item"/>
 </body>
