--- a/custom/vanwieisamersfoort/content/a.html
+++ b/custom/vanwieisamersfoort/content/a.html
@@ -15,21 +15,44 @@
         <xyz
           id="map"
           style="height:100%; width:100%"
-          searchPlaceholder="Zoek op adres, buurt of wijk"
-          uri="/locatie/*/geojson,EigenaarID?EigenaarID==$EigenaarIDs&geojson>=<$view"
+          showSearchBar="true"
+          searchContext="Amersfoort"
+          searchPresets="
+          Binnenstad,
+          De Koppel,
+          De Kruiskamp,
+          Hoogland,
+          Hooglanderveen,
+          Kattenbroek,
+          Leusderkwartier,
+          Liendert,
+          Nieuwland,
+          Randenbroek,
+          Rustenberg,
+          Schothorst,
+          Schuilenburg,
+          Soesterkwartier,
+          Vathorst,
+          Vermeerkwartier,
+          Zielhorst"
+          searchPlaceholder="Spring naar een wijk"
+          uri="/locatie/*/geojson,EigenaarID?geojson>=<$view"
           hideMessages showCreateButton="false" color="EigenaarID" location="geojson" select="locatie" display="map"
+          showFitToDataButton="false"
           viewBoxSelect="view=599842.2834046325,6828347.071935917,600135.6954529143,6828578.049652248"
         />
       </td>
       <td valign="top"style="background-color:#EFEFEF; height: calc(100vh - 50px);">
         <xyz
-            uri="/eigenaar/*/id,Eigenaar=name,Percelen=aantal,Oppervlakte(m^2)=oppervlakte"
+            uri="/locatie/*/EigenaarID?geojson>=<$view"
+            sortby="sortby"
             hideMessages
             showSearchBar="true"
             hide="id"
-            color="id"
-            display="list"
-            multiSelect="EigenaarIDs"
+            groupby="EigenaarID"
+            color="EigenaarID"
+            display="chart"
+            flavor="table"
             select="eigenaar"
             searchPlaceholder="Zoek op eigenaar"
             sortByToolTipPrefix="Sorteer op"
